feat: register user

--- a/styles/config.scss
+++ b/styles/config.scss
@@ -4,6 +4,7 @@ $lightGreyColor:#FFEBF2;
 $mediumGreyColor:#91A3AD;
 $mediumGreyColorOpacity:#91A3AD26;
 $darkGreyColor:#575757;
+$lightGreyColorB:#a8a8a8;
 $errorColor:#ED421C;
-
+$successColor: #1046b9;
 $mediaQueryDesktop:1024px;
