--- a/styles/app.scss
+++ b/styles/app.scss
@@ -30,6 +30,7 @@ body {
 
 @import './config.scss';
 @import './login.scss';
+@import './register.scss';
 @import './header.scss';
 @import './footer.scss';
 @import './filter.scss';
@@ -93,4 +94,9 @@ input, select {
         padding: 5px;
         outline: none;
     }
+}
+
+.button-secondary {
+    height: 500px;
+    background-color: $mediumGreyColor !important;
 }
